--- a/hyperlink.html
+++ b/hyperlink.html
@@ -2,7 +2,7 @@
     <html>
         Whatever
 
-
+my dad says "Try adding an HTML button, backed by JavaScript that when pressed, pops up a dialog that says “Hello!” "
 
 
 
