began to implement javascript code

--- a/hyperlink.html
+++ b/hyperlink.html
@@ -3,8 +3,12 @@
         Whatever
 
 my dad says "Try adding an HTML button, backed by JavaScript that when pressed, pops up a dialog that says “Hello!” "
+<! this is a comment i think.. well im gonna add in a script element here so umm here we go
+can you use the keyword source in place of src
+>
+<script src="index.js">    
 
-
+</script>
 
 
 
