--- a/hyperlink.html
+++ b/hyperlink.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-    <html>
+<head>    
+<html>
         Whatever
 
-my dad says "Try adding an HTML button, backed by JavaScript that when pressed, pops up a dialog that says “Hello!” "
-<! this is a comment i think.. well im gonna add in a script element here so umm here we go
-can you use the keyword source in place of src
->
+    <button id="4" oncl>
+    <!-- this is a comment i think.. well im gonna add in a script element here so umm here we go
+-->
+
+<center>
+<input type="button" value="clikc here" onClick="alert('WWW.com')">
+</center>
+</head>
 <script src="index.js">    
 
 </script>
