--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   
     <head> <!head is a known tag in html...also div.. h1, h2,>
-        <!h1 can be used as a largest header.. treated like an object and can   be reused for same fontsize and style>
+        <!--h1 can be used as a largest header.. treated like an object and can   be reused for same fontsize and style-->
           <b> <center>
             Check check check check check check check
          </b> </center>
