NOTE: html is for structuring. CSS is for styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <center> <b> <font color = "CC98DD";>   <!USE COLOR HEXACODE FOR FONT>
             purple
         </font>
-            PURPLE
+            PURPLE~<!DONT USE <//b>  it is depreactated html is only for structuring css is for styling -->
         </b></center>
 <! I NEED TO FIGURE OUT HOW TO RESIZE AND RECOLOR THESE DIVIDERS, AND HOW TO PLACE TEXT AND IMAGES OVER THEM? IS THAT ALREAYD DONE?>
  
