--- a/hyperlink.html
+++ b/hyperlink.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<head>    
 <html>
+<head>    
+
         Whatever
 
     <button id="4" oncl>
@@ -10,7 +11,18 @@
 <center>
 <input type="button" value="clikc here" onClick="alert('WWW.com')">
 </center>
+
 </head>
+<body>
+</br>
+<a href="../index.html">
+    back home
+    <! .. is parent directory.... / is root directory-->
+</a>
+<a href="/images/blur1.JPG" download>download my photo</a>
+</body>
+
+
 <script src="index.js">    
 
 </script>
