--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!  aaa>
 
 
-
+<! type ! and press tab -->
 
 <html>
     <meta charset = "utf-8">
@@ -21,7 +21,7 @@
           <b> <center>
             Check check check check check check check
          </b> </center>
-
+         <a href="#section-2">part2    </a>
 
 
 
@@ -71,7 +71,7 @@
     "image"
 
     <style>
-        
+        <!this is css-->
         font-weight: bold
     </style>
 </p>
@@ -82,7 +82,7 @@
 
 
 <! what is class?!?!?!... OKAY class are object properties that you specify and can be applied to any other 
-region for exmaple an img with the  "standardLayout class imgname.standardLayout" >
+region for exmaple an img with the  "standardLayout class imgname.standardLayout" -->
 
 
 
@@ -90,12 +90,19 @@ region for exmaple an img with the  "standardLayout class imgname.standardLayout
 
 
 
-
-<! HYPERLINX!!!>
+<h2 id="section-2"> 2</h2>
+<p>
+<! HYPERLINX!!!-->
 <a href="hyperlink.html">
     <b>Click This! </b>
 </a>
 
+<a href="#">
+    top
+    </a>
+<a href="https://google.com" target="_blank">google</a>
+<a href="mailto:jamesmarshiv@gmail.com" > email me </a>
+</p>
 <br>
     <body>
         
