delete old stuff and slight update to website

--- a/hyperlink.html
+++ b/hyperlink.html
@@ -2,14 +2,14 @@
 <html>
 <head>    
 
-        Whatever
+        unexpected
+        nonlinear activation to uncover complex relationships
 
     <button id="4" oncl>
-    <!-- this is a comment i think.. well im gonna add in a script element here so umm here we go
--->
+    
 
 <center>
-<input type="button" value="clikc here" onClick="alert('WWW.com')">
+<input type="button" value="click here" onClick="alert('sorry')">
 </center>
 
 </head>
@@ -17,22 +17,19 @@
 </br>
 <a href="../index.html">
     back home
-    <! .. is parent directory.... / is root directory-->
 </a>
-<a href="/images/blur1.JPG" download>download my photo</a>
+<!-- doesn't work<a href="/images/blur1.JPG" download>download photo</a> -->
 </body>
-
-
+<!--
 <script src="index.js">    
-
+how does this work?
 </script>
+-->
 
 
 
 
 
-
-
-    </html>
+</html>
 
 
