--- a/hyperlink.html
+++ b/hyperlink.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>    
-
-        unexpected
         nonlinear activation to uncover complex relationships
 
     <button id="4" oncl>
     
 
 <center>
-<input type="button" value="click here" onClick="alert('sorry')">
+<input type="button" value="click me" onClick="alert('unexpected')">
 </center>
 
 </head>
