--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <center> <b> <font color = "CC98DD";>
             purple
         </font>
-            PURPLE
+            purple
         </b>
     </center>
  
