--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 </div>
 
 <body>
-    <img src = "images/rainbow.jpg">    
+    <img src = "images/blur2.JPG">    
     <style class="size">
         img{
-        length: 280px;
-        width: 360px;
-            }   
+        length: 2112px;
+        width: 1408px;
+        }   
         
 
 
