--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="/styles/indexStyles.css" />
+    <link rel="stylesheet" href="magnet/styles/indexStyles.css" />
   </head>
 
   <body>
     <div class=".navbar">
-      <a href="/index.html">Home</a>
-      <a href="/blog.html">Blog</a>
+      <a href="magnet/index.html">Home</a>
+      <a href="magnet/blog.html">Blog</a>
       <a href="mailto:jamesmarshiv@gmail.com">Email</a>
     </div>
     <br />
