--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,8 @@
 
   <body>
     <div class=".navbar">
-      <a href="index.html">Home</a>
-      <a href="blog.html">Blog</a>
+      <a href="./index.html">Home</a>
+      <a href="./blog.html">Blog</a>
       <a href="mailto:jamesmarshiv@gmail.com">Email</a>
     </div>
 
