--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta
+      charset="UTF-8"
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Home</title>
     <link rel="stylesheet" href="./styles/indexStyles.css" />
+    <script src="./scripts/loadNavbar.js" defer></script>
   </head>
 
   <body>
-    <div class=".navbar">
-      <a href="./index.html">Home</a>
-      <a href="./blog.html">Blog</a>
-      <a href="mailto:jamesmarshiv@gmail.com">Email</a>
-    </div>
-    <br />
+    <div id="navbar-container"></div>
     <div class="home">
-      <div style="background-color: cadetblue; padding: 36px">
+      <div style="background-color: cadetblue; padding: 60px">
         <center>
           <p>
             <b>
