--- a/index.html
+++ b/index.html
@@ -14,16 +14,9 @@
   <body>
     <div id="navbar-container"></div>
     <div class="home">
-      <div style="background-color: cadetblue; padding: 60px">
-        <center>
-          <p>
-            <b>
-              <font color="#CC98DD">purple</font>
-              purple
-            </b>
-          </p>
-        </center>
-      </div>
+      <p>
+        <b> purple </b>
+      </p>
     </div>
   </body>
 </html>
